<resources>
    <string name="app_name">AdminCollage</string>
    <string name="upload_notice">Upload Notice</string>
    <string name="upload_image">upload image</string>
    <string name="upload_ebook">upload Ebook</string>
    <string name="upload_faculty">upload faculty</string>
    <string name="delete_notice">delete notice</string>
    <string name="select_image">select image</string>
    <string name="notice_title">Notice Title</string>
    <string name="emptytitle">Empty title</string>
    <string name="select_pdf">Select Pdf</string>
    <string name="pdf_title">pdf title</string>
    <string name="upload_pdf">Upload Pdf</string>
</resources>