<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="19dp"
    android:layout_height="match_parent"
    tools:context=".UploadNotice">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="159dp"
            app:cardElevation="10dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:id="@+id/addImage">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_papular"
                    android:src="@drawable/ic_image"
                    android:padding="15dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightGray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_image"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/textColor"
                    android:padding="5dp"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/noticeTitle"
                android:hint="@string/notice_title" />
        </com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.button.MaterialButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/upload_notice"
    android:layout_marginTop="6dp"
    android:textAllCaps="false"
    android:id="@+id/uploadNoticeBtn"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="420dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:id="@+id/noticeImageView"/>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>